--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.5",
-    "@angular/cli": "~8.3.5",
+    "@angular/cli": "^9.1.7",
     "@angular/compiler-cli": "^9.1.3",
     "@angular/language-service": "~8.2.7",
     "@types/jasmine": "~3.3.8",
