--- a/client/package.json
+++ b/client/package.json
@@ -21,9 +21,15 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "bulma": "^0.8.2",
     "ckeditor4-angular": "^1.1.0",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "mat-contenteditable": "^8.0.2",
+    "pe7-icon": "^1.0.4",
     "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.3"
